Model ve repository katmanı güncellendi: - Entity ilişkileri düzenlendi - Repository metodları güncellendi - Yapılandırma dosyaları güncellendi